force-app/main/default/objects/Scheme_Slab__c/fields/Included_Products__c.field-meta.xml
<CustomField>
    <fullName>Included_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Included Product</label>
    <referenceTo>Included_Product__c</referenceTo>
    <relationshipLabel>Scheme Slabs</relationshipLabel>
    <relationshipName>Scheme_Slabs</relationshipName>
    <type>Lookup</type>
</CustomField>