force-app/main/default/objects/Scheme_Slab__c/fields/Lower_Limit_Value__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit_Value__c</fullName>
    <label>Lower Limit Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>