force-app/main/default/objects/Scheme_Slab__c/fields/Lower_Limit_Volume__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit_Volume__c</fullName>
    <label>Lower Limit Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>