force-app/main/default/objects/Scheme_Slab__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Scheme Slabs</relationshipLabel>
    <relationshipName>Scheme_Slabs</relationshipName>
    <type>Lookup</type>
</CustomField>