force-app/main/default/objects/Scheme_Slab__c/fields/Upper_Limit_Value__c.field-meta.xml
<CustomField>
    <fullName>Upper_Limit_Value__c</fullName>
    <label>Upper Limit Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>